tests/neg-custom-args/fatal-warnings/i2673.scala
package Foos

class Foo // error
class foo
